--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Welcome to nginx!</title>
+		<title>Hello page</title>
 <style>
     body {
 	            width: 35em;
